--- a/src/styles/live/shared.scss
+++ b/src/styles/live/shared.scss
@@ -240,7 +240,6 @@ a {
 	box-shadow: 0 -5px 42px rgba(0, 0, 0, 0.4);
 	display: flex;
 	align-items: center;
-	justify-content: center;
 
 	.countdown-time {
 		z-index: 1;
@@ -249,7 +248,7 @@ a {
 		white-space: nowrap;
 		text-align: center;
 		font-weight: bold;
-		padding-left: 0.125em;
+		padding-left: 11.5%;
 		text-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
 	}
 
@@ -280,6 +279,7 @@ a {
 	z-index: 100;
 	font-size: 4em;
 	font-weight: bold;
+	left: calc(50% - 110px);
 }
 
 .container {
